--- a/project/pizza/templates/shipping_form.html
+++ b/project/pizza/templates/shipping_form.html
@@ -56,25 +56,25 @@
 
               <div class="col-md-6 mb-3">
                 <label for="id_email">Email </label>
-                <input type="email" class="form-control" name="email" id="id_email" placeholder="you@example.com" >
+                <input type="email" class="form-control" name="email" id="id_email" placeholder="you@example.com" required>
               </div>
 
             </div>
             <div class="row">
               <div class="col-md-6 mb-3">
                 <label for="id_city">Город</label>
-                <input type="text" class="form-control" name="city" id="id_city" placeholder="" >
+                <input type="text" class="form-control" name="city" id="id_city" placeholder="" required>
               </div>
 
               <div class="col-md-6 mb-3">
                 <label for="id_street">Улица</label>
-                <input type="text" class="form-control" name="street" id="id_street" placeholder="" >
+                <input type="text" class="form-control" name="street" id="id_street" placeholder="" required>
               </div>
             </div>
             <div class="row">
               <div class="col-md-3 mb-3">
                 <label for="id_house">Дом</label>
-                <input type="text" class="form-control" name="house" id="id_house" placeholder="" >
+                <input type="text" class="form-control" name="house" id="id_house" placeholder="" required>
               </div>
               <div class="col-md-3 mb-3">
                 <label for="id_apartment">Квартира</label>
@@ -89,7 +89,6 @@
                 <input type="number" class="form-control" name="floor" id="id_floor" placeholder="" >
               </div>
             </div>
-
 
             <div class="row">
               <div class="col-md-3 mb-3">
@@ -110,7 +109,6 @@
             </div>
             <hr class="mb-4">
             <input type="submit" class="btn btn-success" value="Подтвердить заказ">
-<!--            <button class="btn btn-success btn-lg btn-block" type="submit">Подтвердить заказ</button>-->
           </form>
         </div>
       </div>
